--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,10 @@
-Ignore ALL node_modules folders in the entire project
-This is the most important rule.
-node_modules/
+# Environment variables
+.env
+.env*.local
 
-Ignore the environment file specifically in the backend folder
-This protects your secret API keys and database strings.
-backend/.env
+# Node dependencies
+/backend/node_modules
+/frontend/my-app/node_modules
 
-Ignore the React build output folder
-This folder is generated during deployment and should not be on GitHub.
-frontend/my-app/build
-
-Ignore miscellaneous operating system files and logs
-.DS_Store
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Build folders
+/frontend/my-app/build
